Added the LCD state that tries putting the display into byte mode for the first time.

--- a/src/firmware/Lcd/Makefile
+++ b/src/firmware/Lcd/Makefile
@@ -18,7 +18,8 @@ OBJ_FILES=\
 	EnableEntryModeState.o \
 	EnableSetContrastState.o \
 	WaitState.o \
-	IdleState.o
+	IdleState.o \
+	WriteNibble.o
 
 all: $(LIB_FILENAME)
 
