Added the LCD state that tries putting the display into byte mode for the second time.

--- a/src/firmware-tests/Lcd/States/Makefile
+++ b/src/firmware-tests/Lcd/States/Makefile
@@ -5,6 +5,7 @@ all:
 	$(MAKE) -C EnableWaitForMoreThan40ms all
 	$(MAKE) -C Wait all
 	$(MAKE) -C EnableTrySetByteMode1 all
+	$(MAKE) -C EnableTrySetByteMode2 all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
@@ -12,5 +13,6 @@ clean:
 	$(MAKE) -C EnableWaitForMoreThan40ms clean
 	$(MAKE) -C Wait clean
 	$(MAKE) -C EnableTrySetByteMode1 clean
+	$(MAKE) -C EnableTrySetByteMode2 clean
 
 include $(MAKEFILE_RULES)
