--- a/src/firmware/Lcd/Makefile
+++ b/src/firmware/Lcd/Makefile
@@ -15,6 +15,7 @@ OBJ_FILES=\
 	EnableDisplayClearState.o \
 	EnableEntryModeState.o \
 	EnableSetContrastState.o \
+	EnableDisplayOnState.o \
 	WaitState.o \
 	IdleState.o \
 	Write.o
