Started to add the ADC module, which will also be used as an 11kHz interrupt for the LCD contrast delta-sigma DAC.

--- a/src/firmware-tests/Lcd/EnableDisable/Makefile
+++ b/src/firmware-tests/Lcd/EnableDisable/Makefile
@@ -5,34 +5,49 @@ HEX_FILES=\
 	StateAfterEnabledFirstTimeTest.hex \
 	StateAfterEnabledSecondTimeTest.hex \
 	StateAfterDisabledNotAsManyTimesAsEnabledTest.hex \
-	StateAfterDisabledTest.hex
+	StateAfterDisabledTest.hex \
+	DisableAdcTest.hex \
+	DisableAdcNotCalledWhenLcdStillEnabledTest.hex
+
+OBJ_FILES+=\
+	../PollAfterLcdDummy.o
 
 ENABLE_DISABLE_SHIFT_REGISTER_OBJ_FILES=\
 	EnableDisableShiftRegisterTest.o \
 	../EnableDisableShiftRegisterMocks.o \
 	../InitialiseShiftRegisterMock.o \
 	../ShiftOutMock.o \
-	../PollAfterLcdDummy.o
+	../AdcDummies.o
 
 STATE_AFTER_ENABLED_FIRST_TIME_OBJ_FILES=\
 	StateAfterEnabledFirstTimeTest.o \
 	../ShiftRegisterDummies.o \
-	../PollAfterLcdDummy.o
+	../AdcDummies.o
 
 STATE_AFTER_ENABLED_SECOND_TIME_OBJ_FILES=\
 	StateAfterEnabledSecondTimeTest.o \
 	../ShiftRegisterDummies.o \
-	../PollAfterLcdDummy.o
+	../AdcDummies.o
 
 STATE_AFTER_DISABLED_NOT_AS_MANY_TIMES_AS_ENABLED_OBJ_FILES=\
 	StateAfterDisabledNotAsManyTimesAsEnabledTest.o \
 	../ShiftRegisterDummies.o \
-	../PollAfterLcdDummy.o
+	../AdcDummies.o
 
 STATE_AFTER_DISABLED_OBJ_FILES=\
 	StateAfterDisabledTest.o \
 	../ShiftRegisterDummies.o \
-	../PollAfterLcdDummy.o
+	../AdcDummies.o
+
+DISABLE_ADC_OBJ_FILES=\
+	DisableAdcTest.o \
+	../ShiftRegisterDummies.o \
+	../AdcMocks.o
+
+DISABLE_ADC_NOT_CALLED_WHEN_LCD_STILL_ENABLED_OBJ_FILES=\
+	DisableAdcNotCalledWhenLcdStillEnabledTest.o \
+	../ShiftRegisterDummies.o \
+	../AdcMocks.o
 
 all: $(HEX_FILES)
 
@@ -53,5 +68,11 @@ StateAfterDisabledNotAsManyTimesAsEnabledTest.hex: $(OBJ_FILES) $(STATE_AFTER_DI
 
 StateAfterDisabledTest.hex: $(OBJ_FILES) $(STATE_AFTER_DISABLED_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(STATE_AFTER_DISABLED_OBJ_FILES)
+
+DisableAdcTest.hex: $(OBJ_FILES) $(DISABLE_ADC_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(DISABLE_ADC_OBJ_FILES)
+
+DisableAdcNotCalledWhenLcdStillEnabledTest.hex: $(OBJ_FILES) $(DISABLE_ADC_NOT_CALLED_WHEN_LCD_STILL_ENABLED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(DISABLE_ADC_NOT_CALLED_WHEN_LCD_STILL_ENABLED_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
