--- a/src/firmware-tests/Lcd/States/EnableWaitForMoreThan40ms/Makefile
+++ b/src/firmware-tests/Lcd/States/EnableWaitForMoreThan40ms/Makefile
@@ -2,6 +2,8 @@ HEX_FILES=\
 	TimeNotElapsedTest.hex \
 	TimeElapsedTest.hex
 
+OBJ_FILES+=../../AdcDummies.o
+
 TEST_DOUBLE_OBJ_FILES=\
 	../../PollAfterLcdMock.o \
 	../../ShiftRegisterDummies.o
