--- a/src/firmware-tests/Makefile
+++ b/src/firmware-tests/Makefile
@@ -37,6 +37,7 @@ all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Motor all
 	$(MAKE) -C TemperatureSensor all
 	$(MAKE) -C Lcd all
+	$(MAKE) -C Adc all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
@@ -55,5 +56,6 @@ clean:
 	$(MAKE) -C Motor clean
 	$(MAKE) -C TemperatureSensor clean
 	$(MAKE) -C Lcd clean
+	$(MAKE) -C Adc clean
 
 include $(MAKEFILE_RULES)
