--- a/src/firmware-tests/Clock/Makefile
+++ b/src/firmware-tests/Clock/Makefile
@@ -8,7 +8,7 @@ export OBJ_FILES=\
 	$(CURDIR)/InitialiseAfterClockMock.o \
 	$(CURDIR)/PollAfterClockMock.o
 
-all: InitialiseAfterClockMock.o PollAfterClockMock.o
+all: InitialiseAfterClockMock.o PollAfterClockDummy.o PollAfterClockMock.o
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C TimerWiring all
 	$(MAKE) -C Poll all
