--- a/src/firmware-tests/Lcd/Makefile
+++ b/src/firmware-tests/Lcd/Makefile
@@ -3,10 +3,10 @@ export OBJ_FILES=\
 	$(SUT_OBJ_FILE) \
 	$(FIRMWARE_CORE_OBJ_FILES) \
 	$(TEST_FIXTURE_OBJ_FILES) \
-	$(CURDIR)/InitialiseAfterLcdMock.o \
 	$(FIRMWARE_DIR)/Timer0.o
 
 TEST_DOUBLE_OBJ_FILES=\
+	InitialiseAfterLcdDummy.o \
 	InitialiseAfterLcdMock.o \
 	InitialiseShiftRegisterDummy.o \
 	InitialiseShiftRegisterMock.o \
@@ -27,11 +27,13 @@ all: $(TEST_DOUBLE_OBJ_FILES)
 	$(MAKE) -C Initialisation all
 	$(MAKE) -C EnableDisable all
 	$(MAKE) -C States all
+	$(MAKE) -C Contrast all
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C Initialisation clean
 	$(MAKE) -C EnableDisable clean
 	$(MAKE) -C States clean
+	$(MAKE) -C Contrast clean
 
 include $(MAKEFILE_RULES)
