--- a/src/firmware-tests/Lcd/Initialisation/Makefile
+++ b/src/firmware-tests/Lcd/Initialisation/Makefile
@@ -2,20 +2,35 @@ ASARGS+=-I $(FIRMWARE_DIR)/Lcd
 
 HEX_FILES=\
 	InitialisationChainTest.hex \
-	InitialStateTest.hex
+	InitialStateTest.hex \
+	PortaTest.hex \
+	AnselTest.hex
 
 OBJ_FILES+=\
+	$(ASSERT_NO_ISR_OBJ_FILE) \
 	../PollAfterLcdDummy.o \
 	../AdcDummies.o
 
 INITIALISATION_CHAIN_OBJ_FILES=\
 	InitialisationChainTest.o \
+	../InitialiseAfterLcdMock.o \
 	../InitialiseShiftRegisterMock.o \
 	../EnableDisableShiftRegisterMocks.o \
 	../ShiftOutMock.o
 
 INITIAL_STATE_OBJ_FILES=\
 	InitialStateTest.o \
+	../InitialiseAfterLcdDummy.o \
+	../ShiftRegisterDummies.o
+
+PORTA_OBJ_FILES=\
+	PortaTest.o \
+	../InitialiseAfterLcdDummy.o \
+	../ShiftRegisterDummies.o
+
+ANSEL_OBJ_FILES=\
+	AnselTest.o \
+	../InitialiseAfterLcdDummy.o \
 	../ShiftRegisterDummies.o
 
 all: $(HEX_FILES)
@@ -28,5 +43,11 @@ InitialisationChainTest.hex: $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
 
 InitialStateTest.hex: $(OBJ_FILES) $(INITIAL_STATE_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIAL_STATE_OBJ_FILES)
+
+PortaTest.hex: $(OBJ_FILES) $(PORTA_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(PORTA_OBJ_FILES)
+
+AnselTest.hex: $(OBJ_FILES) $(ANSEL_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ANSEL_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
