Re-ordered the linked libraries in the utilities Makefiles to avoid the link error in Travis.

--- a/src/utilities/lpf-rc/Makefile
+++ b/src/utilities/lpf-rc/Makefile
@@ -1,13 +1,14 @@
 CC=gcc
 CCARGS=-c
 LD=gcc
-LDARGS=-lm
+LDARGS=
+LIBS=-lm
 
 EXE_FILE=lpf-rc
 OBJ_FILES=lpf-rc.o
 
 all: $(OBJ_FILES)
-	$(LD) $(LDARGS) -o $(EXE_FILE) $(OBJ_FILES)
+	$(LD) $(LDARGS) -o $(EXE_FILE) $(OBJ_FILES) $(LIBS)
 
 clean:
 	rm -Rf $(OBJ_FILES) $(EXE_FILE)
