--- a/src/firmware-tests/ShiftRegister/Initialisation/Makefile
+++ b/src/firmware-tests/ShiftRegister/Initialisation/Makefile
@@ -1,19 +1,25 @@
 HEX_FILES=\
 	AnselTest.hex \
 	PortcTest.hex \
-	InitialisationChainTest.hex
+	InitialisationChainTest.hex \
+	ShiftRegisterBufferClearedTest.hex
+
+OBJ_FILES+=\
+	../EnableMotorVddDummy.o \
+	../DisableMotorVddDummy.o \
+	../IsMotorVddEnabledDummy.o
 
 ANSEL_OBJ_FILES=\
-	AnselTest.o \
-	../EnableDisableMotorVddMocks.o
+	AnselTest.o
 
 PORTC_OBJ_FILES=\
-	PortcTest.o \
-	../EnableDisableMotorVddMocks.o
+	PortcTest.o
 
 INITIALISATION_CHAIN_OBJ_FILES=\
-	InitialisationChainTest.o \
-	../EnableDisableMotorVddMocks.o
+	InitialisationChainTest.o
+
+SHIFT_REGISTER_BUFFER_CLEARED_OBJ_FILES=\
+	ShiftRegisterBufferClearedTest.o
 
 all: $(HEX_FILES)
 
@@ -28,5 +34,8 @@ PortcTest.hex: $(OBJ_FILES) $(PORTC_OBJ_FILES)
 
 InitialisationChainTest.hex: $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(INITIALISATION_CHAIN_OBJ_FILES)
+
+ShiftRegisterBufferClearedTest.hex: $(OBJ_FILES) $(SHIFT_REGISTER_BUFFER_CLEARED_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(SHIFT_REGISTER_BUFFER_CLEARED_OBJ_FILES)
 
 include $(MAKEFILE_RULES)
