The ShiftRegister module now calls enableSmps() and disableSmps() rather than dealing with VDD_MOTOR.

--- a/src/firmware-tests/Motor/EnableDisable/Makefile
+++ b/src/firmware-tests/Motor/EnableDisable/Makefile
@@ -6,9 +6,9 @@ HEX_FILES=\
 	IsEnabledTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
-	../EnableDisableSmpsMocks.o \
-	../IsSmpsEnabledStub.o \
-	../PollSmpsDummy.o \
+	../../Smps/EnableDisableSmpsMocks.o \
+	../../Smps/IsSmpsEnabledStub.o \
+	../../Smps/PollSmpsDummy.o \
 	../PollAfterMotorMock.o
 
 ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES=\
