--- a/src/firmware-tests/Motor/Initialisation/Makefile
+++ b/src/firmware-tests/Motor/Initialisation/Makefile
@@ -4,9 +4,9 @@ HEX_FILES=\
 	InitialisationChainTest.hex
 
 TEST_DOUBLE_OBJ_FILES=\
-	../EnableDisableSmpsMocks.o \
-	../IsSmpsEnabledStub.o \
-	../PollSmpsDummy.o \
+	../../Smps/EnableDisableSmpsMocks.o \
+	../../Smps/IsSmpsEnabledStub.o \
+	../../Smps/PollSmpsDummy.o \
 	../PollAfterMotorMock.o
 
 ANSEL_OBJ_FILES=\
