--- a/src/firmware-tests/ShiftRegister/EnableDisable/Makefile
+++ b/src/firmware-tests/ShiftRegister/EnableDisable/Makefile
@@ -1,29 +1,33 @@
 HEX_FILES=\
-	EnableDisableMotorVddTest.hex \
+	EnableDisableSmpsTest.hex \
 	EnableDisablePortTest.hex \
 	IsShiftRegisterEnabledTest.hex
 
-ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES=\
-	EnableDisableMotorVddTest.o \
-	../EnableDisableMotorVddMocks.o
+ENABLE_DISABLE_SMPS_OBJ_FILES=\
+	EnableDisableSmpsTest.o \
+	../../Smps/EnableDisableSmpsMocks.o \
+	../../Smps/IsSmpsEnabledDummy.o \
+	../../Smps/PollSmpsDummy.o
 
 ENABLE_DISABLE_PORT_OBJ_FILES=\
 	EnableDisablePortTest.o \
-	../EnableDisableMotorVddStubs.o
+	../../Smps/EnableDisableSmpsDummies.o \
+	../../Smps/PollSmpsDummy.o
 
 IS_SHIFT_REGISTER_ENABLED_OBJ_FILES=\
 	IsShiftRegisterEnabledTest.o \
-	../EnableMotorVddDummy.o \
-	../DisableMotorVddDummy.o \
-	../IsMotorVddEnabledStub.o
+	../../Smps/EnableSmpsDummy.o \
+	../../Smps/DisableSmpsDummy.o \
+	../../Smps/IsSmpsEnabledStub.o \
+	../../Smps/PollSmpsDummy.o
 
 all: $(HEX_FILES)
 
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 
-EnableDisableMotorVddTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES)
-	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_MOTOR_VDD_OBJ_FILES)
+EnableDisableSmpsTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
+	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_SMPS_OBJ_FILES)
 
 EnableDisablePortTest.hex: $(OBJ_FILES) $(ENABLE_DISABLE_PORT_OBJ_FILES)
 	$(LD) $(LDARGS) -o $@ $(OBJ_FILES) $(ENABLE_DISABLE_PORT_OBJ_FILES)
