Added shift register initialisation to the LCD initialisation to prevent glitches on power-up.

--- a/src/firmware-tests/Lcd/Contrast/Makefile
+++ b/src/firmware-tests/Lcd/Contrast/Makefile
@@ -17,6 +17,10 @@ TEST_DOUBLE_OBJ_FILES=\
 	../DisableShiftRegisterDummy.o \
 	../IsShiftRegisterEnabledStubbedTrue.o \
 	../ShiftOutDummy.o \
+	../../Motor/InitialiseMotorDummy.o \
+	../../Motor/EnableMotorVddDummy.o \
+	../../Motor/DisableMotorVddDummy.o \
+	../../Motor/IsMotorVddEnabledDummy.o \
 	../../Isr/InitialiseAfterIsrDummy.o \
 	../../Adc/InitialiseAfterAdcDummy.o \
 	../../Clock/PollAfterClockDummy.o
