--- a/src/firmware-tests/Lcd/States/Makefile
+++ b/src/firmware-tests/Lcd/States/Makefile
@@ -5,6 +5,7 @@ export OBJ_FILES+=\
 
 all:
 	$(MAKE) -C EnableWaitForShiftRegister all
+	$(MAKE) -C EnableWaitForMotorVdd all
 	$(MAKE) -C EnableWaitForMoreThan40ms all
 	$(MAKE) -C Wait all
 	$(MAKE) -C EnableTrySetByteMode1 all
@@ -21,6 +22,7 @@ all:
 clean:
 	$(RM) -f $(BUILD_ARTEFACT_PATTERN)
 	$(MAKE) -C EnableWaitForShiftRegister clean
+	$(MAKE) -C EnableWaitForMotorVdd clean
 	$(MAKE) -C EnableWaitForMoreThan40ms clean
 	$(MAKE) -C Wait clean
 	$(MAKE) -C EnableTrySetByteMode1 clean
