--- a/src/firmware-tests/Lcd/States/EnableDisplayOn/Makefile
+++ b/src/firmware-tests/Lcd/States/EnableDisplayOn/Makefile
@@ -5,7 +5,8 @@ HEX_FILES=\
 	IsLcdEnabledTest.hex
 
 OBJ_FILES+=\
-	../../AdcDummies.o
+	../../AdcDummies.o \
+	../../../Motor/MotorDummies.o
 
 SHIFT_OUT_OBJ_FILES=\
 	ShiftOutTest.o \
